third_party/move/move-compiler-v2/tests/match-checks/guard_after_wildcard.exp

Diagnostics:
error: unreachable pattern
   ┌─ tests/match-checks/guard_after_wildcard.move:14:13
   │
14 │             y if cond => 1,
   │             ^

error: unreachable pattern
   ┌─ tests/match-checks/guard_after_wildcard.move:24:13
   │
24 │             x if cond => 4,
   │             ^
